k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: pluto-project-restore
    stack: prexit
    stage: CODE
  name: pluto-project-restore
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      service: pluto-project-restore
      stack: prexit
      stage: CODE
  template:
    metadata:
      labels:
        log-format: django
        service: pluto-project-restore
        stack: prexit
        stage: CODE
    spec:
      containers:
        - image: guardianmultimedia/pluto-project-restore:DEV
          imagePullPolicy: Never
          name: project-restore
          ports:
            - containerPort: 9000
              name: restore
