k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: pluto-restore-assets
    stack: prexit
    stage: CODE
  name: pluto-restore-assets
spec:
  ports:
    - name: '9000'
      port: 9000
      targetPort: 9000
  selector:
    service: pluto-restore-assets
    stack: prexit
    stage: CODE
